gcp/asm/no-mtls-sidecar-yamls/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingressgateway-int
  labels:
    istio.io/rev: asm-managed
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-a-runtime
  labels:
    istio-injection: disabled
